--- a/views/secondpage.ejs
+++ b/views/secondpage.ejs
@@ -12,19 +12,17 @@
   </head>
   <body>
 
-
-    <h1 class="display-2"><%=  title %></h1> 
-    <% data.forEach(function(result){ %>
-
-      <p><h2><%=result.name%></h2></p>
-
+<% title.forEach(function(name){ %>
+  <h1 class="display-2"><%=  name %></h1>
+<% }) %>
+<% data.forEach(function(res){ %>
+      <p><%=res.name%></p>
+    
    <% })  %>
-
-
-
-
-
-
+   <% dat.forEach(function(resu){ %>
+          <p><%=resu.name%></p>
+    
+     <% })  %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
