--- a/views/secondpage.ejs
+++ b/views/secondpage.ejs
@@ -13,18 +13,20 @@
   <body>
 
 
-    <h1 class="display-2"><%=  title %></h1> 
-    <% data.forEach(function(result){ %>
 
-      <p><h2><%=result.name%></h2></p>
+   <% for(var i=0;i<data.length;i++) { %>
 
-   <% })  %>
+      <% for(var j=0;j<data[i].length;j++){ %>
 
+       <span><%= data[i][j] %></span>
 
+      <% } %>
+        <br>
+   <% } %>
 
+    
+ 
 
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
