--- a/views/secondpage.ejs
+++ b/views/secondpage.ejs
@@ -7,22 +7,71 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="styles.css">
     <title>Final Time Table</title>
   </head>
   <body>
 
-
-
+<% var week=["day1","day2","day3","day4","day5"]%>
+<!-- <div class="container-fluid main">
    <% for(var i=0;i<data.length;i++) { %>
+    <span class="days" id=<%= week[i] %>>
+      <p><%= data[i][0] %></p>
+     </span>
+    
+      <% for(var j=1;j<data[i].length;j++){ %>
 
-      <% for(var j=0;j<data[i].length;j++){ %>
-
-       <span><%= data[i][j] %></span>
+       <span class=<%= week[i] %>>
+         <%= data[i][j] %>
+        </span>
 
       <% } %>
+
         <br>
    <% } %>
+  </div> -->
+  <div class="container-fluid main">
+    <h1 style="margin-top: -82px;margin-bottom: 1.5rem;text-align: center;">Your time-table looks like this</h1>
+    <div style="display: flex;margin-bottom: 9px;justify-content: center;">
+    <h3>Duration of your semester : </h3>
+    
+<% if(months!=0){ %>
+  <h3> <%= months %> </h3>
+<form class="hide" style="padding-top: 6px;margin-left: 17px;" action="/dur" method="post">
+      <input name="duration" type="number" placeholder="no. of months">
+</form>
+<form class="visible" action="/modify" method="post">
+<button style="background-color: white;" type="submit"><span><img style="width: 2%;position: absolute;top: 102.5px;left: 961.1px;" 
+  src="imgs\twotone_edit_black_24dp.png" alt=""></span></button>
+</form>
+<% } else{ %>
+  <!-- <h3><%= months %></h3> -->
+  <form style="padding-top: 6px;margin-left: 17px;" action="/dur" method="post">
+    <input name="duration" type="number" placeholder="no. of months">
+</form>
+<% } %>
+</div>
+    <% for(var i=0;i<data.length;i++) { %>
+      <div class="col">
+     <span class="days" id=<%= week[i] %>>
+       <p><%= data[i][0] %></p>
+      </span>
+     
+       <% for(var j=1;j<data[i].length;j++){ %>
+ 
+        <div class=<%= week[i] %>>
+          <%= data[i][j] %>
+        </div>
+ 
+       <% } %>
+ 
+         <br>
+        </div>
+    <% } %>
+  
+   </div>
+
+         
 
     
  
