--- a/views/thirdpage.ejs
+++ b/views/thirdpage.ejs
@@ -39,7 +39,7 @@
             checkboxes.forEach((checkbox) => {
                 values.push(checkbox.value);
          });
-            
+            // Click submit and check the console of inspect element you will get the array of check items
      }
     
 
