--- a/views/thirdpage.ejs
+++ b/views/thirdpage.ejs
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity=
+        "sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
+        crossorigin="anonymous">
+    </script>
     <title>Third Page</title>
 </head>
 <body>
@@ -32,6 +37,7 @@
     <script type="text/javascript">
         
         var values=[];
+        var a;
         function check(value)
         {
             for(var i=0;i<values.length;i++)
@@ -51,7 +57,13 @@
                 }
                 
         });
-            console.log(values)
+            var a= JSON.stringify(values);
+            console.log(a);
+            $.post("/attendence",{
+
+                datas:values
+
+            })
      }
     
 
