--- a/views/secondpage.ejs
+++ b/views/secondpage.ejs
@@ -7,24 +7,88 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="styles.css">
     <title>Final Time Table</title>
   </head>
   <body>
 
+<% var week=["day1","day2","day3","day4","day5"]%>
+<!-- <div class="container-fluid main">
+   <% for(var i=0;i<data.length;i++) { %>
+    <span class="days" id=<%= week[i] %>>
+      <p><%= data[i][0] %></p>
+     </span>
+    
+      <% for(var j=1;j<data[i].length;j++){ %>
 
-    <h1 class="display-2"><%=  title %></h1> 
-    <% data.forEach(function(result){ %>
+       <span class=<%= week[i] %>>
+         <%= data[i][j] %>
+        </span>
 
-      <p><h2><%=result.name%></h2></p>
+      <% } %>
 
-   <% })  %>
+        <br>
+   <% } %>
+  </div> -->
+  <div class="container-fluid main">
+    <h1 style="margin-top: -82px;margin-bottom: 1.5rem;text-align: center;">Your time-table looks like this</h1>
+    <div style="display: flex;margin-bottom: 9px;justify-content: center;">
+    <h3>Duration of your semester : </h3>
+    
+<% if(months!=0){ %>
+  <h3> <%= months %> </h3>
+<form class="hide" style="padding-top: 6px;margin-left: 17px;" action="/dur" method="post">
+      <input name="duration" type="number" placeholder="no. of months">
+</form>
+<form class="visible" action="/modify" method="post">
+<button style="background-color: white;" type="submit"><span><img style="width: 2%;position: absolute;top: 102.5px;left: 961.1px;" 
+  src="imgs\twotone_edit_black_24dp.png" alt=""></span></button>
+</form>
+<% } else{ %>
+  <!-- <h3><%= months %></h3> -->
+  <form style="padding-top: 6px;margin-left: 17px;" action="/dur" method="post">
+    <input name="duration" type="number" placeholder="no. of months">
+</form>
+<% } %>
+</div>
+    <% for(var i=0;i<data.length;i++) { %>
+      <div class="column">
+     <span class="days" id=<%= week[i] %>>
+       <p><%= data[i][0] %></p>
+      </span>
+     
+       <% for(var j=1;j<data[i].length;j++){ %>
+ 
+        <div class=<%= week[i] %>>
+          <%= data[i][j] %>
+        </div>
+ 
+       <% } %>
+ 
+         <br>
+        </div>
+    <% } %>
+  <div class="container" style="display: inline-block;text-align: center;margin-top: 103px;padding-bottom: 0px;">
+    <div class="row">
+      <div class="col">
+        <form action="/edit" method="post">
+        <button  style="width: 12rem;" class="btn btn-danger">EDIT</button>
+      </form>
+      </div>
+      <div class="col">
+        <form action="/subject" method="get">
+        <button  style="width: 12rem;" class="btn btn-success">PROCEED</button>
+      </form>
+      </div>
+    </div>
+  </div>
+   </div>
 
+         
 
+    
+ 
 
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
